# mepsdk

./: CMakeLists.txt
patches/: gcc-6.patch
